Added sound with main menu, game, and game over.